<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/availLogout"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/logout" />

            <Button
                android:id="@+id/button8"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/home" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="Available Rooms"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:text="Date"
            android:textSize="16dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/date_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/enter_date" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="Time"
            android:textSize="16dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/time_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/enter_time" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="Room Type"
            android:textSize="16dp"
            android:textStyle="bold"
            />
        <Spinner
            android:id="@+id/room_typ"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:entries="@array/Room_type" />
        <Button
            android:id="@+id/avl_room_search_btn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="Search"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <TableLayout
                android:id="@+id/room_table"
                android:layout_width="fill_parent"
                android:layout_margin="20dp"
                android:layout_height="match_parent"
                android:stretchColumns="0,1,2,3"
                android:gravity="center">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Room"
                        android:layout_column="0"
                        android:textStyle="bold"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Type"
                        android:layout_column="1"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Modify"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_column="2"
                        />

                </TableRow>



            </TableLayout>
        </ScrollView>

    </LinearLayout>
</ScrollView>