<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModifyRoom">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/availLogout"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/logout" />

        <Button
            android:id="@+id/button8"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/home" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="Modify Room"
        android:textSize="25dp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Room Number:"
            android:textSize="16dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/room_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="14dp"
            android:textColor="#000000"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:text="Room Type"
        android:textSize="16dp"
        android:textStyle="bold"
        />
    <Spinner
        android:id="@+id/roomTyps"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:entries="@array/Room_type" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="Price per Night"
        android:textSize="16dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/edit_room_price"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_new_price"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="Room Status"
        android:textSize="16dp"
        android:textStyle="bold"
        />
    <Spinner
        android:id="@+id/roomStat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:entries="@array/Room_status" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cancel_edit"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:text="Cancel" />
        <Button
            android:id="@+id/save_edit"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:onClick="onClick"
            android:text="Save" />
    </LinearLayout>
</LinearLayout>